# bmstu-db-course-6th-sem

./: .gitignore  README.md  history.txt  next.config.js  package.json
docs/latex/: 01-definitions.aux  01-definitions.tex  02-abbreviations.aux  02-abbreviations.tex  03-introduction.aux  03-introduction.tex  04-analysis.aux  04-analysis.tex  05-design.aux  05-design.tex  06-implementation.aux  06-implementation.tex  07-research.aux  07-research.tex  08-conclusion.aux  08-conclusion.tex  09-biblio.aux  09-biblio.tex  Makefile  RPZ_title.doc  biblio.bib  coursework.aux  coursework.bbl  coursework.blg  coursework.out  coursework.tex  coursework.toc  listings-rust.sty  preamble.inc.old.tex  preamble.inc.tex
src/: layout.tsx  root.module.css
src-tauri/: .gitignore  Cargo.toml  docker-compose.yml  history.txt  tauri.conf.json  test.sh
src-tauri/benches/: bench.rs  credentials.json
src-tauri/src/: api.rs  lib.rs  macros.rs  main.rs  utils.rs
src-tauri/src/errors/: api.rs  mod.rs  surreal.rs
src-tauri/src/models/: answer.rs  computer.rs  graph.rs  human.rs  interrogator.rs  mod.rs  question.rs  relations.rs  session.rs  verdict.rs
src-tauri/src/repository/: mod.rs  surrealdb.rs  tarantool.rs
src-tauri/tests/: integration_test.rs
src/app/: global.css  greet.tsx  layout.tsx  page.tsx  root.module.css  theme.ts  themeRegistry.tsx
src/app/account/: page.tsx  style.module.css
src/app/login/: page.tsx  page_old.tsx
src/app/signup/: page.module.css  page.tsx
src/components/: login.tsx  signup.tsx
src/components/navbar/: navbar.module.css  navbar.tsx
src/types/: types.d.ts
